--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npx prisma generate",
-    "prepare": "husky",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml}\"",
-    "check": "prettier --check \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml}\""
+    "postinstall": "npx prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
@@ -59,6 +56,7 @@
     "nanoid": "^5.0.7",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -74,6 +72,8 @@
     "resend": "^3.4.0",
     "shiki": "^1.7.0",
     "sonner": "^1.5.0",
+    "sugar-high": "^0.7.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.4",
@@ -88,7 +88,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "husky": "^9.1.1",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prisma": "^5.16.2",
